When changing the selection in a textarea (e.g. while moving lines with ALT+UP/DOWN), afterwards we now make sure that the selection is visible and scroll accordingly.

--- a/KnowWE/KnowWE-Resources/src/main/webapp/KnowWEExtension/css/general.css
+++ b/KnowWE/KnowWE-Resources/src/main/webapp/KnowWEExtension/css/general.css
@@ -30,6 +30,11 @@ used colors
 /* ################################################## */
 /* -------------- general settings    --------------- */
 /* ################################################## */
+textarea {
+	line-height: 16px;
+	/* we need to set this, because without a set line-height, 
+	scrolling of the textarea does not work after changing the selection in TextArea.js*/
+}
 a {
     color: #003366;
     cursor: pointer;
